fix: address CodeQL real-bug findings (resource leaks, sync, immutability)
Targets the high-signal subset of CodeQL findings — actual correctness
bugs in production and test code. Style-only alerts (missing @Override,
unused-parameter, confusing-method-signature) are out of scope.

Production code:

  UnboundedFeedbackLogger.replyLoggedEnvelops() now wraps the
  DataInputViewStreamWrapper in try-with-resources. The wrapper inherits
  from DataInputStream and closing it closes the underlying InputStream;
  this is fine here — both callers (FeedbackUnionOperator and the unit
  test) hand the stream off and do not read from it again.

  NettyProtobuf.serializeOutputStream() wraps ByteBufOutputStream in
  try-with-resources. ByteBufOutputStream.close() does NOT release the
  underlying ByteBuf, so this only releases the stream's JVM resources
  — no impact on Netty buffer pooling.

  ModuleSpecs.ModuleSpec uses List.copyOf instead of
  Collections.unmodifiableList. The wrapped list was already produced
  via `new ArrayList<>(artifacts)` in the builder, but List.copyOf is
  truly immutable rather than a read-only view, which CodeQL trusts.

Test helpers (ByteArrayInputStream subclasses):

  RandomReadLengthByteArrayInputStream.read(byte[], int, int) and
  OneBytePerReadByteArrayInputStream.read(byte[], int, int) now declare
  `synchronized`, matching the contract of ByteArrayInputStream's
  synchronized read methods. The tests are single-threaded today, but
  the parent contract is synchronized and overrides must match.

Test code (4 fixes, all in UnboundedFeedbackLoggerTest):

  DataInputViewStreamWrapper wrap-and-read patterns in
  roundTripWithHeader, roundTripWithoutHeader, emptyKeyGroupWithHeader,
  and emptyKeyGroupWithoutHeader now use try-with-resources.

Deliberately left unfixed (dismissed via API as won't fix):

  StatefulFunctionsUniverse.ingress() / .egress() expose mutable Maps.
  Harness.java intentionally mutates these via the accessors to inject
  test-t